--- a/FRONT END/HTML/samplewebsite.html
+++ b/FRONT END/HTML/samplewebsite.html
@@ -12,19 +12,18 @@
        <table  width=100%> 
         <tr><td><img src="../images/img2.png" width="60" height="70">
         <span><h4>Fra Flowers</h4> </span></td>
-        <td align="center"><input type="search"></td>
-        <td align="center"><button>okay</button></td>
+        <td align="center"><input type="search" placeholder="Search the flower"></td>
         <td align="center"><button>Setting</button></td>
     </tr>
     </table>
-    <img src="../images/image1.png" width="1050"height="450" class="center">
     <h1 align="center"> Fra flowers</h1>
     <p align="center"> "Carry the beauty of kindness and fragrance with you"</p>
+    <img src="../images/image1.png" width="1250"height="450" class="center">
     <table  width="100%"><tr>
         <td>
         <div>
             <a href="./table.html">
-             <img src="../images/img3.png" width="100"></a>
+             <img src="../images/img3.png"></a>
              <h1>paper flower</h1>
             <pre>
 This flower is soft in nature 
@@ -125,7 +124,7 @@ and a display of abundant strength and power.</pre>
         <td>
             <div>
                 <a href="./table.html">
-                <img src="../images/img3.png" width="100"></a>
+                <img src="../images/img3.png" ></a>
                 <h1>paper flower</h1>
                 <pre>
 This flower is soft in nature 
